--- a/src/templates/settings/_apicolumnfields.twig
+++ b/src/templates/settings/_apicolumnfields.twig
@@ -140,6 +140,22 @@
                         "optgroup":"From PBS API",
                         "label":"From PBS API"
                     },
+	                  {
+                        "value":"premiered_on",
+                        "label":"premiered_on"
+                    },
+                    {
+                        "value":"episodes_count",
+                        "label":"episodes_count"
+                    },
+                    {
+                        "value":"links",
+                        "label":"links"
+                    },
+                    {
+                        "value":"featured_preview",
+                        "label":"featured_preview"
+                    },
                     {
                         "value":"description_short",
                         "label":"description_short"
