add logic to support syncing passport and public availability

--- a/src/templates/settings/_apicolumnfields.twig
+++ b/src/templates/settings/_apicolumnfields.twig
@@ -153,6 +153,14 @@
                         "label":"links"
                     },
                     {
+                        "value": "stream_with_passport",
+                        "label": "Stream with Passport (bool)"
+                    },
+                    {
+                        "value": "available_to_public",
+                        "label": "Available to Public (bool)"
+                    },
+                    {
                         "value":"featured_preview",
                         "label":"featured_preview"
                     },
