add craft 4 support

--- a/src/templates/show.twig
+++ b/src/templates/show.twig
@@ -73,8 +73,8 @@
 
             {{ forms.textField({
                 first: true,
-                label: 'Show Content ID'|t( 'mediamanager' ),
-                instructions: 'PBS Media Content ID used by this show.'|t( 'mediamanager' ),
+                label: 'Show API Key'|t( 'mediamanager' ),
+                instructions: 'PBS Media API Key used by this show.'|t( 'mediamanager' ),
                 id: 'apiKey',
                 name: 'apiKey',
                 value: activeShow.apiKey,
