--- a/src/templates/settings/_apicolumnfields.twig
+++ b/src/templates/settings/_apicolumnfields.twig
@@ -98,8 +98,13 @@
                 type: 'select',
                 options: [
                     {"label":"— Select Field Type —"},
-                    {"value":"craft\\fields\\Assets","label":"Assets"},{"value":"craft\\fields\\Date","label":"Date/Time"},{"value":"craft\\fields\\Lightswitch","label":"Lightswitch"},{"value":"craft\\fields\\PlainText","label":"Plain Text"},{"value":"craft\\redactor\\Field","label":"Redactor"},
-                    {"value":"craft\\ckeditor\\Field","label":"CKEditor"},{"value":"craft\\fields\\Tags","label":"Tags"}
+                    {"value":"craft\\fields\\Assets","label":"Assets"},
+                    {"value":"craft\\fields\\Date","label":"Date/Time"},
+                    {"value":"craft\\fields\\Lightswitch","label":"Lightswitch"},
+                    {"value":"craft\\fields\\PlainText","label":"Plain Text"},
+                    {"value":"craft\\redactor\\Field","label":"Redactor"},
+                    {"value":"craft\\ckeditor\\Field","label":"CKEditor"},
+                    {"value":"craft\\fields\\Entry","label":"Entry"}
                 ]
             }
         ]
