add ability to delete scheduled syncs from index pane

--- a/src/templates/scheduler/_edit.twig
+++ b/src/templates/scheduler/_edit.twig
@@ -11,6 +11,33 @@
 	{ label: 'Media Manager', url: url('mediamanager') },
 	{ label: 'Scheduler'|t('mediamanager'), url: url('mediamanager/scheduler') },
 ] %}
+{% set name = scheduledSync.name %}
+
+{% set formActions = [
+	{
+		label: 'Delete'|t('app'),
+		action: 'mediamanager/scheduled-sync/delete',
+		redirect: 'mediamanager/scheduler'|hash,
+		destructive: true,
+		confirm: "Are you sure you want to delete “#{name}”?",
+		name: name,
+	}
+]
+%}
+
+{% block actionButton %}
+	{% if fullPageForm %}
+		<div class="btngroup">
+			{% block submitButton %}
+				<button type="submit" class="btn submit">{{ submitButtonLabel ?? 'Save'|t('app') }}</button>
+			{% endblock %}
+			{% if formActions ?? false %}
+				<button type="button" class="btn submit menubtn" aria-label="{{ 'More actions'|t('app') }}"></button>
+				{% include '_layouts/components/form-action-menu' %}
+			{% endif %}
+		</div>
+	{% endif %}
+{% endblock %}
 
 {% block content %}
 	<input type="hidden" name="action" value="mediamanager/scheduled-sync/save-scheduled-sync">
@@ -150,4 +177,3 @@
 	</div>
 
 {% endblock %}
-
