--- a/src/templates/scheduler/index.twig
+++ b/src/templates/scheduler/index.twig
@@ -19,6 +19,7 @@
 				<th>Show</th>
 				<th>Description</th>
 				<th>Scheduled for</th>
+				<th></th>
 			</tr>
 		</thead>
 		<tbody>
@@ -31,7 +32,9 @@
 				<td>{{ show.name }}</td>
 				<td>{{ scheduledSync.description }}</td>
 				<td>{{ scheduledSync.scheduleDate|datetime('M d, Y g:ia e') }}</td>
-
+				<td class="thin action">
+					<a class="delete icon" title="Delete" role="button" data-id="{{ scheduledSync.id }}"></a>
+				</td>
 			</tr>
 		{% endfor %}
 		</tbody>
@@ -45,3 +48,7 @@
 		</div>
 	</div>
 {% endblock %}
+
+{% js on ready %}
+	new Craft.SyncScheduler();
+{% endjs %}
